@@ -1,5 +1,7 @@
 *SVN*
 
+* Use raise instead of assert_not_nil in Test::Unit::TestCase#process to ensure that the test variables (controller, request, response) have been set
+
 * Make sure assigns are built for every request when testing #1866
 
 * Allow remote_addr to be queried on TestRequest #1668
@@ -7,7 +9,7 @@
 * Fixed bug when a partial render was passing a local with the same name as the partial
 
 * Improved performance of test app req/sec with ~10% refactoring the render method #1823 [Stefan Kaes]
-                                  
+
 * Improved performance of test app req/sec with 5-30% through a series of Action Pack optimizations #1811 [Stefan Kaes]
 
 * Changed caching/expiration/hit to report using the DEBUG log level and errors to use the ERROR log level instead of both using INFO
